# libfw-window

./: .gitmodules  CMakeLists.txt  LICENSE
cmake/: utilities.cmake
include/flyingwhales/: window.hpp
include/flyingwhales/window/: window_interface.hpp  window_win.hpp
lib/: CMakeLists.txt
src/: window_win.cpp
